--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "taskmanager-cli": {
@@ -25,7 +25,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"              
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
@@ -124,6 +124,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "taskmanager-cli"
+    }
+  },
+  "defaultProject": "taskmanager-cli",
+  "cli": {
+    "analytics": false
+  }
 }
